# V2.PetMo

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.docker/filebeat/: Dockerfile
.docker/kibana/: Dockerfile  kibana.yml
.docker/logstash/: Dockerfile
.docker/nginx/: Dockerfile  nginx.conf
auths/: serializers.py  urls.py  views.py
bookmarks/: admin.py  models.py  serializers.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: logger.py  settings.py  urls.py
images/: models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_initial.py
likes/: admin.py  models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
logstash/config/: logstash.yml
pets/: admin.py  models.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py
posts/: admin.py  documents.py  models.py  pagination.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_content_alter_comment_parent_comment_and_more.py  0004_alter_post_boardanimaltypes.py  0005_alter_post_content.py
search/: documents.py  urls.py  views.py
users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_username.py
(+839 files in other folders)
